# pid-elapsed

./: README.md  package.json  setup.cfg  setup.py
scripts/: pid-elapsed
tests/pid-elapsed/examples/: pid-elapsed.sh
