# https://pypi.org/project/setupcfg-generator/
[metadata]
name = pid-elapsed
version = 2019.4.13
url = https://github.com/looking-for-a-job/pid-elapsed
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pid elapsed

[options]
install_requires = 
	setuptools
scripts = 
	scripts/pid-elapsed
